trab4/new_grammar.output
Terminals unused in grammar

   ERRU


Grammar

    0 $accept: program $end

    1 program: globalStmtList

    2 globalStmtList: %empty
    3               | globalStmtList globalStmt

    4 globalStmt: defFun
    5           | declFun ';'
    6           | declOrdeclInitVar
    7           | declFun error

    8 $@1: %empty

    9 declFun: AHEAD BASE_TYPE ID $@1 '(' paramListVoid ')'

   10 typeAndNameSign: BASE_TYPE ID
   11                | BASE_TYPE ID '[' num ']'
   12                | MAT_TYPE BASE_TYPE ID '[' num ']' '[' num ']'

   13 declOrdeclInitVar: typeAndNameSign ';'
   14                  | typeAndNameSign '=' rvalue ';'
   15                  | typeAndNameSign '=' rvalue error

   16 paramListVoid: paramList
   17              | %empty

   18 paramList: paramList ',' param
   19          | param

   20 param: BASE_TYPE ID
   21      | BASE_TYPE ID '[' ']'
   22      | MAT_TYPE BASE_TYPE ID

   23 localStmtList: localStmtList localStmt
   24              | %empty

   25 localStmt: call ';'
   26          | lvalue '=' rvalue ';'
   27          | flowControl
   28          | loop
   29          | RETURN expr ';'
   30          | RETURN expr error
   31          | IREAD '(' lvalue ')' ';'
   32          | FREAD '(' lvalue ')' ';'
   33          | PRINT '(' rvalue ')' ';'
   34          | PRINT '(' V_ASCII ')' ';'
   35          | COPY '(' lvalue lvalue ')' ';'
   36          | ';'

   37 flowControl: IF '(' expr ')' block ELSE flowControl
   38            | IF '(' expr ')' block ELSE block
   39            | IF '(' expr ')' block
   40            | IF '(' expr error block ELSE block
   41            | IF error expr ')' block ELSE block
   42            | IF '(' error ')' block

   43 loop: WHILE '(' expr ')' block

   44 $@2: %empty

   45 defFun: BASE_TYPE ID '(' $@2 paramListVoid ')' '{' declList localStmtList '}'

   46 numListList: numListList '{' numList '}'
   47            | %empty

   48 numList: numList ',' num
   49        | num

   50 block: '{' localStmtList '}'

   51 declList: declList declOrdeclInitVar
   52         | %empty

   53 expr: expr '+' expr
   54     | expr '-' expr
   55     | expr '*' expr
   56     | expr '/' expr
   57     | expr '%' expr
   58     | expr '@' expr
   59     | expr MAT_POW expr
   60     | expr EQ expr
   61     | expr NEQ expr
   62     | expr GE expr
   63     | expr LE expr
   64     | expr '>' expr
   65     | expr '<' expr
   66     | expr AND expr
   67     | expr OR expr
   68     | '!' expr
   69     | '&' expr
   70     | '(' expr ')'
   71     | ICAST '(' expr ')'
   72     | FCAST '(' expr ')'
   73     | lvalue
   74     | call
   75     | num

   76 call: ID '(' argList ')'
   77     | ID '(' ')'

   78 argList: argList ',' arg
   79        | arg

   80 arg: lvalue
   81    | ID '(' expr ')' '(' expr ')'

   82 num: V_INT
   83    | V_FLOAT

   84 lvalue: ID
   85       | ID '[' expr ']'
   86       | ID '[' expr ']' '[' expr ']'

   87 rvalue: expr
   88       | '{' numList '}'
   89       | '[' numListList ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 68
'%' (37) 57
'&' (38) 69
'(' (40) 9 31 32 33 34 35 37 38 39 40 42 43 45 70 71 72 76 77 81
')' (41) 9 31 32 33 34 35 37 38 39 41 42 43 45 70 71 72 76 77 81
'*' (42) 55
'+' (43) 53
',' (44) 18 48 78
'-' (45) 54
'/' (47) 56
';' (59) 5 13 14 25 26 29 31 32 33 34 35 36
'<' (60) 65
'=' (61) 14 15 26
'>' (62) 64
'@' (64) 58
'[' (91) 11 12 21 85 86 89
']' (93) 11 12 21 85 86 89
'{' (123) 45 46 50 88
'}' (125) 45 46 50 88
error (256) 7 15 30 40 41 42
EQ (258) 60
NEQ (259) 61
GE (260) 62
LE (261) 63
AND (262) 66
OR (263) 67
MAT_POW (264) 59
BASE_TYPE (265) 9 10 11 12 20 21 22 45
WHILE (266) 43
V_INT (267) 82
V_FLOAT (268) 83
V_ASCII (269) 34
AHEAD (270) 9
MAT_TYPE (271) 12 22
IF (272) 37 38 39 40 41 42
ID (273) 9 10 11 12 20 21 22 45 76 77 81 84 85 86
ICAST (274) 71
FCAST (275) 72
ELSE (276) 37 38 40 41
RETURN (277) 29 30
PRINT (278) 33 34
IREAD (279) 31
FREAD (280) 32
COPY (281) 35
ERRU (282)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
globalStmtList (49)
    on left: 2 3, on right: 1 3
globalStmt (50)
    on left: 4 5 6 7, on right: 3
declFun (51)
    on left: 9, on right: 5 7
$@1 (52)
    on left: 8, on right: 9
typeAndNameSign (53)
    on left: 10 11 12, on right: 13 14 15
declOrdeclInitVar (54)
    on left: 13 14 15, on right: 6 51
paramListVoid (55)
    on left: 16 17, on right: 9 45
paramList (56)
    on left: 18 19, on right: 16 18
param (57)
    on left: 20 21 22, on right: 18 19
localStmtList (58)
    on left: 23 24, on right: 23 45 50
localStmt (59)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36, on right: 23
flowControl (60)
    on left: 37 38 39 40 41 42, on right: 27 37
loop (61)
    on left: 43, on right: 28
defFun (62)
    on left: 45, on right: 4
$@2 (63)
    on left: 44, on right: 45
numListList (64)
    on left: 46 47, on right: 46 89
numList (65)
    on left: 48 49, on right: 46 48 88
block (66)
    on left: 50, on right: 37 38 39 40 41 42 43
declList (67)
    on left: 51 52, on right: 45 51
expr (68)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75, on right: 29 30 37 38 39 40 41 43 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 81 85 86 87
call (69)
    on left: 76 77, on right: 25 74
argList (70)
    on left: 78 79, on right: 76 78
arg (71)
    on left: 80 81, on right: 78 79
num (72)
    on left: 82 83, on right: 11 12 48 49 75
lvalue (73)
    on left: 84 85 86, on right: 26 31 32 35 73 80
rvalue (74)
    on left: 87 88 89, on right: 14 15 26 33


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (globalStmtList)

    program         go to state 1
    globalStmtList  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: globalStmtList .
    3 globalStmtList: globalStmtList . globalStmt

    BASE_TYPE  shift, and go to state 4
    AHEAD      shift, and go to state 5
    MAT_TYPE   shift, and go to state 6

    $default  reduce using rule 1 (program)

    globalStmt         go to state 7
    declFun            go to state 8
    typeAndNameSign    go to state 9
    declOrdeclInitVar  go to state 10
    defFun             go to state 11


State 3

    0 $accept: program $end .

    $default  accept


State 4

   10 typeAndNameSign: BASE_TYPE . ID
   11                | BASE_TYPE . ID '[' num ']'
   45 defFun: BASE_TYPE . ID '(' $@2 paramListVoid ')' '{' declList localStmtList '}'

    ID  shift, and go to state 12


State 5

    9 declFun: AHEAD . BASE_TYPE ID $@1 '(' paramListVoid ')'

    BASE_TYPE  shift, and go to state 13


State 6

   12 typeAndNameSign: MAT_TYPE . BASE_TYPE ID '[' num ']' '[' num ']'

    BASE_TYPE  shift, and go to state 14


State 7

    3 globalStmtList: globalStmtList globalStmt .

    $default  reduce using rule 3 (globalStmtList)


State 8

    5 globalStmt: declFun . ';'
    7           | declFun . error

    error  shift, and go to state 15
    ';'    shift, and go to state 16


State 9

   13 declOrdeclInitVar: typeAndNameSign . ';'
   14                  | typeAndNameSign . '=' rvalue ';'
   15                  | typeAndNameSign . '=' rvalue error

    ';'  shift, and go to state 17
    '='  shift, and go to state 18


State 10

    6 globalStmt: declOrdeclInitVar .

    $default  reduce using rule 6 (globalStmt)


State 11

    4 globalStmt: defFun .

    $default  reduce using rule 4 (globalStmt)


State 12

   10 typeAndNameSign: BASE_TYPE ID .
   11                | BASE_TYPE ID . '[' num ']'
   45 defFun: BASE_TYPE ID . '(' $@2 paramListVoid ')' '{' declList localStmtList '}'

    '('  shift, and go to state 19
    '['  shift, and go to state 20

    $default  reduce using rule 10 (typeAndNameSign)


State 13

    9 declFun: AHEAD BASE_TYPE . ID $@1 '(' paramListVoid ')'

    ID  shift, and go to state 21


State 14

   12 typeAndNameSign: MAT_TYPE BASE_TYPE . ID '[' num ']' '[' num ']'

    ID  shift, and go to state 22


State 15

    7 globalStmt: declFun error .

    $default  reduce using rule 7 (globalStmt)


State 16

    5 globalStmt: declFun ';' .

    $default  reduce using rule 5 (globalStmt)


State 17

   13 declOrdeclInitVar: typeAndNameSign ';' .

    $default  reduce using rule 13 (declOrdeclInitVar)


State 18

   14 declOrdeclInitVar: typeAndNameSign '=' . rvalue ';'
   15                  | typeAndNameSign '=' . rvalue error

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30
    '['      shift, and go to state 31
    '{'      shift, and go to state 32

    expr    go to state 33
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36
    rvalue  go to state 37


State 19

   45 defFun: BASE_TYPE ID '(' . $@2 paramListVoid ')' '{' declList localStmtList '}'

    $default  reduce using rule 44 ($@2)

    $@2  go to state 38


State 20

   11 typeAndNameSign: BASE_TYPE ID '[' . num ']'

    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26

    num  go to state 39


State 21

    9 declFun: AHEAD BASE_TYPE ID . $@1 '(' paramListVoid ')'

    $default  reduce using rule 8 ($@1)

    $@1  go to state 40


State 22

   12 typeAndNameSign: MAT_TYPE BASE_TYPE ID . '[' num ']' '[' num ']'

    '['  shift, and go to state 41


State 23

   68 expr: '!' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 42
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 24

   69 expr: '&' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 43
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 25

   82 num: V_INT .

    $default  reduce using rule 82 (num)


State 26

   83 num: V_FLOAT .

    $default  reduce using rule 83 (num)


State 27

   76 call: ID . '(' argList ')'
   77     | ID . '(' ')'
   84 lvalue: ID .
   85       | ID . '[' expr ']'
   86       | ID . '[' expr ']' '[' expr ']'

    '('  shift, and go to state 44
    '['  shift, and go to state 45

    $default  reduce using rule 84 (lvalue)


State 28

   71 expr: ICAST . '(' expr ')'

    '('  shift, and go to state 46


State 29

   72 expr: FCAST . '(' expr ')'

    '('  shift, and go to state 47


State 30

   70 expr: '(' . expr ')'

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 48
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 31

   89 rvalue: '[' . numListList ']'

    $default  reduce using rule 47 (numListList)

    numListList  go to state 49


State 32

   88 rvalue: '{' . numList '}'

    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26

    numList  go to state 50
    num      go to state 51


State 33

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   87 rvalue: expr .

    EQ       shift, and go to state 52
    NEQ      shift, and go to state 53
    GE       shift, and go to state 54
    LE       shift, and go to state 55
    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66

    $default  reduce using rule 87 (rvalue)


State 34

   74 expr: call .

    $default  reduce using rule 74 (expr)


State 35

   75 expr: num .

    $default  reduce using rule 75 (expr)


State 36

   73 expr: lvalue .

    $default  reduce using rule 73 (expr)


State 37

   14 declOrdeclInitVar: typeAndNameSign '=' rvalue . ';'
   15                  | typeAndNameSign '=' rvalue . error

    error  shift, and go to state 67
    ';'    shift, and go to state 68


State 38

   45 defFun: BASE_TYPE ID '(' $@2 . paramListVoid ')' '{' declList localStmtList '}'

    BASE_TYPE  shift, and go to state 69
    MAT_TYPE   shift, and go to state 70

    $default  reduce using rule 17 (paramListVoid)

    paramListVoid  go to state 71
    paramList      go to state 72
    param          go to state 73


State 39

   11 typeAndNameSign: BASE_TYPE ID '[' num . ']'

    ']'  shift, and go to state 74


State 40

    9 declFun: AHEAD BASE_TYPE ID $@1 . '(' paramListVoid ')'

    '('  shift, and go to state 75


State 41

   12 typeAndNameSign: MAT_TYPE BASE_TYPE ID '[' . num ']' '[' num ']'

    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26

    num  go to state 76


State 42

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   68     | '!' expr .

    $default  reduce using rule 68 (expr)


State 43

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   69     | '&' expr .

    $default  reduce using rule 69 (expr)


State 44

   76 call: ID '(' . argList ')'
   77     | ID '(' . ')'

    ID   shift, and go to state 77
    ')'  shift, and go to state 78

    argList  go to state 79
    arg      go to state 80
    lvalue   go to state 81


State 45

   85 lvalue: ID '[' . expr ']'
   86       | ID '[' . expr ']' '[' expr ']'

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 82
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 46

   71 expr: ICAST '(' . expr ')'

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 83
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 47

   72 expr: FCAST '(' . expr ')'

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 84
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 48

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   70     | '(' expr . ')'

    EQ       shift, and go to state 52
    NEQ      shift, and go to state 53
    GE       shift, and go to state 54
    LE       shift, and go to state 55
    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66
    ')'      shift, and go to state 85


State 49

   46 numListList: numListList . '{' numList '}'
   89 rvalue: '[' numListList . ']'

    ']'  shift, and go to state 86
    '{'  shift, and go to state 87


State 50

   48 numList: numList . ',' num
   88 rvalue: '{' numList . '}'

    ','  shift, and go to state 88
    '}'  shift, and go to state 89


State 51

   49 numList: num .

    $default  reduce using rule 49 (numList)


State 52

   60 expr: expr EQ . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 90
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 53

   61 expr: expr NEQ . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 91
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 54

   62 expr: expr GE . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 92
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 55

   63 expr: expr LE . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 93
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 56

   66 expr: expr AND . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 94
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 57

   67 expr: expr OR . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 95
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 58

   65 expr: expr '<' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 96
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 59

   64 expr: expr '>' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 97
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 60

   53 expr: expr '+' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 98
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 61

   54 expr: expr '-' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 99
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 62

   57 expr: expr '%' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 100
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 63

   55 expr: expr '*' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 101
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 64

   56 expr: expr '/' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 102
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 65

   58 expr: expr '@' . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 103
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 66

   59 expr: expr MAT_POW . expr

    '!'      shift, and go to state 23
    '&'      shift, and go to state 24
    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26
    ID       shift, and go to state 27
    ICAST    shift, and go to state 28
    FCAST    shift, and go to state 29
    '('      shift, and go to state 30

    expr    go to state 104
    call    go to state 34
    num     go to state 35
    lvalue  go to state 36


State 67

   15 declOrdeclInitVar: typeAndNameSign '=' rvalue error .

    $default  reduce using rule 15 (declOrdeclInitVar)


State 68

   14 declOrdeclInitVar: typeAndNameSign '=' rvalue ';' .

    $default  reduce using rule 14 (declOrdeclInitVar)


State 69

   20 param: BASE_TYPE . ID
   21      | BASE_TYPE . ID '[' ']'

    ID  shift, and go to state 105


State 70

   22 param: MAT_TYPE . BASE_TYPE ID

    BASE_TYPE  shift, and go to state 106


State 71

   45 defFun: BASE_TYPE ID '(' $@2 paramListVoid . ')' '{' declList localStmtList '}'

    ')'  shift, and go to state 107


State 72

   16 paramListVoid: paramList .
   18 paramList: paramList . ',' param

    ','  shift, and go to state 108

    $default  reduce using rule 16 (paramListVoid)


State 73

   19 paramList: param .

    $default  reduce using rule 19 (paramList)


State 74

   11 typeAndNameSign: BASE_TYPE ID '[' num ']' .

    $default  reduce using rule 11 (typeAndNameSign)


State 75

    9 declFun: AHEAD BASE_TYPE ID $@1 '(' . paramListVoid ')'

    BASE_TYPE  shift, and go to state 69
    MAT_TYPE   shift, and go to state 70

    $default  reduce using rule 17 (paramListVoid)

    paramListVoid  go to state 109
    paramList      go to state 72
    param          go to state 73


State 76

   12 typeAndNameSign: MAT_TYPE BASE_TYPE ID '[' num . ']' '[' num ']'

    ']'  shift, and go to state 110


State 77

   81 arg: ID . '(' expr ')' '(' expr ')'
   84 lvalue: ID .
   85       | ID . '[' expr ']'
   86       | ID . '[' expr ']' '[' expr ']'

    '('  shift, and go to state 111
    '['  shift, and go to state 45

    $default  reduce using rule 84 (lvalue)


State 78

   77 call: ID '(' ')' .

    $default  reduce using rule 77 (call)


State 79

   76 call: ID '(' argList . ')'
   78 argList: argList . ',' arg

    ')'  shift, and go to state 112
    ','  shift, and go to state 113


State 80

   79 argList: arg .

    $default  reduce using rule 79 (argList)


State 81

   80 arg: lvalue .

    $default  reduce using rule 80 (arg)


State 82

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   85 lvalue: ID '[' expr . ']'
   86       | ID '[' expr . ']' '[' expr ']'

    EQ       shift, and go to state 52
    NEQ      shift, and go to state 53
    GE       shift, and go to state 54
    LE       shift, and go to state 55
    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66
    ']'      shift, and go to state 114


State 83

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   71     | ICAST '(' expr . ')'

    EQ       shift, and go to state 52
    NEQ      shift, and go to state 53
    GE       shift, and go to state 54
    LE       shift, and go to state 55
    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66
    ')'      shift, and go to state 115


State 84

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr
   72     | FCAST '(' expr . ')'

    EQ       shift, and go to state 52
    NEQ      shift, and go to state 53
    GE       shift, and go to state 54
    LE       shift, and go to state 55
    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66
    ')'      shift, and go to state 116


State 85

   70 expr: '(' expr ')' .

    $default  reduce using rule 70 (expr)


State 86

   89 rvalue: '[' numListList ']' .

    $default  reduce using rule 89 (rvalue)


State 87

   46 numListList: numListList '{' . numList '}'

    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26

    numList  go to state 117
    num      go to state 51


State 88

   48 numList: numList ',' . num

    V_INT    shift, and go to state 25
    V_FLOAT  shift, and go to state 26

    num  go to state 118


State 89

   88 rvalue: '{' numList '}' .

    $default  reduce using rule 88 (rvalue)


State 90

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   60     | expr EQ expr .
   61     | expr . NEQ expr
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr

    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66

    $default  reduce using rule 60 (expr)


State 91

   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   58     | expr . '@' expr
   59     | expr . MAT_POW expr
   60     | expr . EQ expr
   61     | expr . NEQ expr
   61     | expr NEQ expr .
   62     | expr . GE expr
   63     | expr . LE expr
   64     | expr . '>' expr
   65     | expr . '<' expr
   66     | expr . AND expr
   67     | expr . OR expr

    AND      shift, and go to state 56
    OR       shift, and go to state 57
    '<'      shift, and go to state 58
    '>'      shift, and go to state 59
    '+'      shift, and go to state 60
    '-'      shift, and go to state 61
    '%'      shift, and go to state 62
    '*'      shift, and go to state 63
    '/'      shift, and go to state 64
    '@'      shift, and go to state 65
    MAT_POW  shift, and go to state 66

    $default  reduce using rule 61 (expr)


State 92
